--- a/about.html
+++ b/about.html
@@ -5,8 +5,16 @@ description: "This is what I do."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>
+  <h1>Jungwoon Park</h1>
+  <h3 style="color: #ffd500">Android Developer</h3>
+</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>
+  Hi, It's Jungwoon. I am Software Engineer with Project Management skills. I had worked on more than 120 projects with corporates for 3 years.
+  Now i am currently work for Nielsen. Nielsen serves lots of data analytics for businesses and compaines.
+</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>
+  Please send me an e-mail if you have some questions or other needs. byjungwoon@gmail.com
+</p>
