--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "EVERYTHING YOU NEED FOR DEVELOPMENT"
+description: "Everything You need for Development"
 ---
 
 {% for post in paginator.posts %}
