--- a/about.html
+++ b/about.html
@@ -11,8 +11,12 @@ header-img: "img/about-bg.jpg"
 </p>
 
 <p>
-  Hi, It's Jungwoon. I am Software Engineer with Project Management skills. I had worked on more than 120 projects with corporates for 3 years.
+  Hi, It's Jungwoon. I am Software Engineer. I had worked on more than 10 projects with corporates for 3 years.
   Now i am currently work for Nielsen. Nielsen serves lots of data analytics for businesses and compaines.
+</p>
+
+<p>
+  If you want to more informations about me, please check <span style="color: #ffd500"><a href="https://www.linkedin.com/in/jungwoon-park/">here</a></span>
 </p>
 
 <p>
