--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/about-bg.jpg"
 </p>
 
 <p>
-  If you want to more informations about me, please check <span style="color: #ffd500"><a href="https://www.linkedin.com/in/jungwoon-park/">here</a></span>
+  If you want to more informations about me, please check <a href="https://www.linkedin.com/in/jungwoon-park/">here</a>
 </p>
 
 <p>
