--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@ header-img: "img/about-bg.jpg"
 
 <p>
   <h1>Jungwoon Park</h1>
-  <h3 style="color: #ffd500">Android Developer</h3>
+  <h3 style="color: #ffd500">Software Engineer</h3>
 </p>
 
 <p>
-  Hi, It's Jungwoon. I am Software Engineer. I had worked on more than 10 projects with corporates for 3 years.
+  Hi, It's Jungwoon. I'm Software Engineer. I had worked on more than 10 projects with corporates for 3 years.
   Now i am currently work for Nielsen. Nielsen serves lots of data analytics for businesses and compaines.
 </p>
 
