--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@ header-img: "img/about-bg.jpg"
 </p>
 
 <p>
-  Hi, It's Jungwoon. I'm Software Engineer. I had worked on more than 10 projects with corporates for 3 years.
-  Now i am currently work for Nielsen. Nielsen serves lots of data analytics for businesses and compaines.
+  안녕하세요 저는 현재 안드로이드 개발자로 일하고 있는 박정운이라고 합니다. 주로 안드로이드와 구글 클라우드 및 그 외에
+  개인적으로 공부하고 싶었던 부분을 공부하며 정리하는 블로그 입니다.
 </p>
 
 <p>
-  If you want to more informations about me, please check <a href="https://www.linkedin.com/in/jungwoon-park/">here</a>
+  만약 저에 대해 좀 더 많은 정보를 알고 싶으면 <a href="https://www.linkedin.com/in/jungwoon-park/">here</a> 에서 확인하실 수 있습니다.
 </p>
