--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ header-img: "img/about-bg.jpg"
 </p>
 
 <p>
-  안녕하세요 저는 현재 안드로이드 개발자로 일하고 있는 박정운이라고 합니다. 주로 안드로이드와 구글 클라우드 및 그 외에
+  안녕하세요 저는 현재 안드로이드 개발자로 일하고 있는 박정운이라고 합니다. 주로 안드로이드와 구글 클라우드에 대해 포스팅을 하며, 그 외에
   개인적으로 공부하고 싶었던 부분을 공부하며 정리하는 블로그 입니다.
 </p>
 
