--- a/about.html
+++ b/about.html
@@ -16,5 +16,5 @@ header-img: "img/about-bg.jpg"
 </p>
 
 <p>
-  만약 저에 대해 좀 더 많은 정보를 알고 싶으면 <a href="https://www.linkedin.com/in/jungwoon-park/">here</a> 에서 확인하실 수 있습니다.
+  만약 저에 대해 좀 더 많은 정보를 알고 싶으면 <a href="https://www.linkedin.com/in/jungwoon-park/">여기</a>에서 확인하실 수 있습니다.
 </p>
